apps/media/sabnzbd-vpn-media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd-vpn-media
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd-vpn-media
  template:
    metadata:
      labels:
        app: sabnzbd-vpn-media

    spec:
      containers:
      - name: sabnzbd-vpn-media
        # https://hub.docker.com/r/binhex/arch-sabnzbdvpn/tags
        image: binhex/arch-sabnzbdvpn:4.2.3-1-06
        resources:
          requests:
            memory: "6Gi"
            cpu: "6000m"
          limits:
            memory: "10Gi"
            cpu: "8000m"
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
          privileged: true
        ports:
        - containerPort: 8080
        - containerPort: 8090
        volumeMounts:
        - name: sabnzbd-vpn-media-config
          mountPath: /config
        # - name: downloads-nas-ssd
        #   mountPath: /config/Downloads
        - name: downloads-nas-hdd
          mountPath: /config/Downloads
      volumes:
      # - name: downloads-nas-ssd
      #   nfs:
      #     server: "10.0.20.3"
      #     path: /mnt/ssd/kubernetes/sabnzbd-vpn-media
      - name: downloads-nas-hdd
        nfs:
          server: "10.0.20.3"
          path: /mnt/tank/downloads/sabnzbd-vpn-media
      - name: sabnzbd-vpn-media-config
        hostPath:
          path: /lxc-configs/sabnzbd-vpn-media-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
