apps/media/sabnzbd-vpn-media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-vpn-media
spec:
  selector:
    app: sabnzbd-vpn-media
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8090
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
