apps/media/sabnzbd-vpn-media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # hajimari.io/enable: "true"
    # hajimari.io/icon: "weather-sunset"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  namespace: media
  name: &appname sabnzbd-vpn-media-https
spec:
  rules:
  - host: &local_uri sabnzbd-vpn-media.k8s.maxwlang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd-vpn-media
            port:
              number: 443
  tls:
  - hosts:
    - *local_uri
    secretName: *appname
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # hajimari.io/enable: "true"
    # hajimari.io/icon: "weather-sunset"
    traefik.ingress.kubernetes.io/router.entrypoints: web
  namespace: media
  name: &appname sabnzbd-vpn-media-http
spec:
  rules:
  - host: sabnzbd-vpn-media.k8s.maxwlang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd-vpn-media
            port:
              number: 80
